update package json and cypress config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "files.associations": { "*.css": "postcss" }
+  "files.associations": {
+    "*.css": "postcss"
+  },
+  "cSpell.words": [
+    "endva",
+    "sveltejs",
+    "tailwindcss",
+    "zerodevx"
+  ]
 }
