--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "db:setup": "prisma db push"
+    "db:setup": "prisma db push",
+    "cy:run": "cypress run",
+    "test": "start-server-and-test start http://localhost:3000 cy:run"
   },
   "prisma": {
     "seed": "node prisma/reset.cjs"
@@ -33,6 +35,7 @@
     "prettier-plugin-svelte": "^2.4.0",
     "prettier-plugin-tailwind": "^2.2.12",
     "prisma": "^3.6.0",
+    "start-server-and-test": "^1.14.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.9.4",
