--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "db:setup": "prisma db push",
-    "cy:run": "cypress run --record",
+    "cy:run": "cypress run --record --key $(grep '^CYPRESS_RECORD_KEY .env)",
     "test": "start-server-and-test start http://localhost:3000 cy:run"
   },
   "prisma": {
