--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "db:setup": "prisma db push",
-    "cy:run": "cypress run --record --key af3cc621-5306-4b54-ae6c-df321b4ee4df",
-    "test": "start-server-and-test start http://localhost:3000 cy:run"
+    "cy:run": "cypress run --record --key 72feffe3-094c-4c36-9c62-93741eec2fba",
+    "test": "start-server-and-test start http://localhost:3000 cy:run",
+    "cy:open": "cypress open"
   },
   "prisma": {
     "seed": "node prisma/reset.cjs"
